{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 74,
  "lineage": "8391c8f0-fabd-0a04-3f2d-0a31ffd7a3bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00309d67b3f9dc0d5",
            "domain": "vpc",
            "id": "eipalloc-00309d67b3f9dc0d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-227-244-93.compute-1.amazonaws.com",
            "public_ip": "34.227.244.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gourav-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:internet-gateway/igw-07f92582abd0fc95f",
            "id": "igw-07f92582abd0fc95f",
            "owner_id": "668692460830",
            "tags": {
              "Name": "gourav-IGW-terraform"
            },
            "tags_all": {
              "Name": "gourav-IGW-terraform"
            },
            "vpc_id": "vpc-049c7addc608d2f20"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00309d67b3f9dc0d5",
            "connectivity_type": "public",
            "id": "nat-080ce7f4ac22b0167",
            "network_interface_id": "eni-0637feb95abaa0d5c",
            "private_ip": "10.0.1.126",
            "public_ip": "34.227.244.93",
            "subnet_id": "subnet-0f43ad0c387784be7",
            "tags": {
              "Name": "aws-my-terraform-nat"
            },
            "tags_all": {
              "Name": "aws-my-terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway-eip",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gourav-vpc-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b4d2574782d09111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-080ce7f4ac22b0167",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b4d2574782d0911",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway-eip",
            "aws_nat_gateway.nat_gateway-eip",
            "aws_route_table.gourav-vpc-private-route-table",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gourav-vpc-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07f92582abd0fc95f",
            "id": "r-rtb-0130edad52bc9f6341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0130edad52bc9f634",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gourav-vpc-igw",
            "aws_route_table.gourav-vpc-public-route-table",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gourav-vpc-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:route-table/rtb-09b4d2574782d0911",
            "id": "rtb-09b4d2574782d0911",
            "owner_id": "668692460830",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gourav-private-route-table"
            },
            "tags_all": {
              "Name": "gourav-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c7addc608d2f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gourav-vpc-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:route-table/rtb-0130edad52bc9f634",
            "id": "rtb-0130edad52bc9f634",
            "owner_id": "668692460830",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gourav-public-route-table"
            },
            "tags_all": {
              "Name": "gourav-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-049c7addc608d2f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gourav-vpc-private-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098a62e00c7783776",
            "route_table_id": "rtb-09b4d2574782d0911",
            "subnet_id": "subnet-0bbc3fefc4aed13d9"
          },
          "dependencies": [
            "aws_route_table.gourav-vpc-private-route-table",
            "aws_subnet.gourav-private-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gourav-vpc-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05450ecd7f9d67239",
            "route_table_id": "rtb-0130edad52bc9f634",
            "subnet_id": "subnet-0f43ad0c387784be7"
          },
          "dependencies": [
            "aws_route_table.gourav-vpc-public-route-table",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gourav-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:subnet/subnet-0bbc3fefc4aed13d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbc3fefc4aed13d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668692460830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourav-private-subnet"
            },
            "tags_all": {
              "Name": "gourav-private-subnet"
            },
            "vpc_id": "vpc-049c7addc608d2f20"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gourav-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:subnet/subnet-0f43ad0c387784be7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f43ad0c387784be7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668692460830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourav-public-subnet"
            },
            "tags_all": {
              "Name": "gourav-public-subnet"
            },
            "vpc_id": "vpc-049c7addc608d2f20"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gourav-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:668692460830:vpc/vpc-049c7addc608d2f20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0c8f13132baae11",
            "default_route_table_id": "rtb-094002ced6cbb6d7f",
            "default_security_group_id": "sg-0e53c858c5e0e58b7",
            "dhcp_options_id": "dopt-0a3e760da4eab2f64",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-049c7addc608d2f20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094002ced6cbb6d7f",
            "owner_id": "668692460830",
            "tags": {
              "Name": "gourav-vpc"
            },
            "tags_all": {
              "Name": "gourav-vpc"
            }
          }
        }
      ]
    }
  ]
}